prevent nav-dropdown link highlight and bold on hover on small screens

--- a/client/assets/stylesheets/modules/nav-dropdown.scss
+++ b/client/assets/stylesheets/modules/nav-dropdown.scss
@@ -46,7 +46,11 @@
 
             a {
                 @include flex-basis(initial);
-                height: 70px;
+                height: 60px;
+                &:hover {
+                    background: initial;
+                    font-family: $font-title;
+                }
             }
         }
     }
